--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,26 @@
 name: test
-on: push
+on:
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
       - name: All test
-        run: bash -xv ./test.bash
-
-
+        run: |
+          # 拡張子なしの本体と、テストスクリプトに実行権限を与える
+          chmod +x menu_proposer
+          chmod +x test.bash
+          
+          # -xv オプションをつけてテストを実行（エラー箇所がわかりやすくなります）
+          bash -xv ./test.bash
